--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="CatCut43a4e07da2" content="C96A22118295CB323A7223773BB30763Y8182" />
     <meta name="description" content="Получить галочку в соц.сетях">  
     <link rel="shortcut icon" href="assets/images/correct.ico">  
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <!-- Global CSS -->
     <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">   
     <!-- Plugins CSS -->
