--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
             <h2 class="section-title">Где можно получить <img class="mark" src="assets/images/correct.svg">?</h2>
             <p class="intro">Пока что галочку можно получить только в Tik Tok и в Instagram</p>
             <ul class="technologies list-inline">
-                <li><a href="tiktok-verification/" target="_blank"><img src="assets/images/tiktok.png" class="social-logo" alt="Tik Tok"></a></li>
-                <li><a href="instagram-verification/" target="_blank"><img src="assets/images/instagram.png" class="social-logo" alt="Instagram"></a></li>
+                <li><a href="http://catcut.net/6xuM" target="_blank"><img src="assets/images/tiktok.png" class="social-logo" alt="Tik Tok"></a></li>
+                <li><a href="http://catcut.net/fxuM" target="_blank"><img src="assets/images/instagram.png" class="social-logo" alt="Instagram"></a></li>
             </ul>
             
             
