--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <div id="instruction" class="instruction">
         <div class="container text-center">
             <h2 class="section-title">Инструкция</h2>
-            <p class="intro1">1.Вибирите социальною сеть для получения галочки <a class="link" href="tiktok-verification/" target="_blank">Tik Tok</a>, <a class="link" href="instagram-verification/" target="_blank">Instagram</a></p>
+            <p class="intro1">1.Вибирите социальною сеть для получения галочки <a class="link" href="http://catcut.net/6xuM" target="_blank">Tik Tok</a>, <a class="link" href="http://catcut.net/fxuM" target="_blank">Instagram</a></p>
             <p class="intro1">2.Введите свой ник в соответствующей социальной сети в поле:<br><img src="https://i.ibb.co/Zfp7VtN/photo1.png" alt="Field" border="0"></p>
             <p class="intro1">3.Нижмите кнопку"Получить галочку" и подождите окончания загрузки.<br><img src="https://i.ibb.co/mRZKkHJ/photo2.png" alt="Button" border="0"></p>
             <p class="intro1">4.После окончания загрузки нажимаем"смотреть" и смотрим короткою рекламу<br><img src="https://i.ibb.co/zfSgbf6/photo3.png" alt="photo3" border="0"></p>
