--- a/instagram-verification/index.html
+++ b/instagram-verification/index.html
@@ -9,6 +9,8 @@
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js" integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30=" crossorigin="anonymous"></script>
 	
 	<link rel="stylesheet" href="style.css">
+  
+  <link rel="stylesheet" href="../assets/css/styles.css">
 
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   
@@ -116,7 +118,7 @@
 <body>
 	<div class="login-page">
   <div class="form">
-    <div class="title">Получить галочку в Instagram</div>
+    <div class="title">Получить галочку в <img src="../assets/images/instagram.png" class="social-media-logo"></div>
     <input type="text" name="username" placeholder="Напишите ваш ник в Instagram">
     <div id="dialog" title="Инъекция HTML-кода">
   <div class="progress-label">Соединение с сервером Instagram(52.54.252.124)</div>
