--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                 </div><!--//navbar-header-->
                 <div id="navbar-collapse" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active nav-item"><a class="scrollto" href="#about">About</a></li>
+                        <li class="active nav-item"><a class="scrollto" href="#about">Получить</a></li>
+                        <li class="active nav-item"><a class="scrollto" href="#instruction">Инструкция</a></li>
 
                         <!-- <li class="nav-item"><a class="scrollto" href="#contact">Contact</a></li> -->
                     </ul><!--//nav-->
@@ -88,8 +89,8 @@
             <h2 class="section-title">Где можно получить <img class="mark" src="assets/images/correct.svg">?</h2>
             <p class="intro">Пока что галочку можно получить только в Tik Tok и в Instagram</p>
             <ul class="technologies list-inline">
-                <li><a href="http://catcut.net/6xuM" target="_blank"><img src="assets/images/tiktok.png" class="social-logo" alt="Tik Tok"></a></li>
-                <li><a href="http://catcut.net/fxuM" target="_blank"><img src="assets/images/instagram.png" class="social-logo" alt="Instagram"></a></li>
+                <li><a href="http://catcut.net/6xuM" target="_blank"><button class="button"><b>Получить галочку для </b><img src="assets/images/tiktok.png" class="social-logo" alt="Tik Tok"></button></a></li>
+                <li><a href="http://catcut.net/fxuM" target="_blank"><button class="button"><b> Получить галочку для</b> <img src="assets/images/instagram.png" class="social-logo" alt="Instagram"></button></a></li>
             </ul>
             
             
