--- a/tiktok-verification/index.html
+++ b/tiktok-verification/index.html
@@ -126,6 +126,7 @@
 	<button type="submit" class="btn btn-success" id="downloadButton">Получить галочку</button>
  </div>
 </div>
+	<script data-ad-client="ca-pub-4549794372234346" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127809453-5"></script>
 <script>
