--- a/tiktok-verification/thank-you/index.html
+++ b/tiktok-verification/thank-you/index.html
@@ -26,6 +26,7 @@
   <div class="login-page">
   
 </div>
+	<script data-ad-client="ca-pub-4549794372234346" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <script>
     swal({
   title: "Успешно!",
